--- a/WebApp/registration_form.html
+++ b/WebApp/registration_form.html
@@ -48,7 +48,7 @@
 
                         <div class="input-field">
                             <label>Password</label>
-                            <input type="password" placeholder="Enter your password">
+                            <input type="password" name="password" placeholder="Enter your password">
                         </div>
                         
                         <div class="input-field">
@@ -64,22 +64,22 @@
                     <div class="fields">
                         <div class="input-field">
                             <label>Email</label>
-                            <input type="text" placeholder="Enter your email">
+                            <input type="text" name="personal_email" placeholder="Enter your email">
                         </div>
 
                         <div class="input-field">
                             <label>Mobile Number</label>
-                            <input type="text"  maxlength="10" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10);" placeholder="Enter mobile number">
+                            <input type="text" name="mobile_number" maxlength="10" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10);" placeholder="Enter mobile number">
                         </div>
 
                         <div class="input-field">
                             <label>Home Number</label>
-                            <input type="text"  maxlength="10" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10);" placeholder="Enter home number">
+                            <input type="text" name="home_number" maxlength="10" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10);" placeholder="Enter home number">
                         </div>
 
                         <div class="input-field">
                             <label>Work Number</label>
-                            <input type="text" maxlength="10" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10);" placeholder="Enter work number">
+                            <input type="text" name="work_number" maxlength="10" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10);" placeholder="Enter work number">
                         </div>
 
                         <div class="input-field">
@@ -102,17 +102,17 @@
                     <div class="fields">
                         <div class="input-field">
                             <label>Contact Name</label>
-                            <input type="text" placeholder="Enter contacts name">
+                            <input type="text" name="contact_person_name" placeholder="Enter contacts name">
                         </div>
 
                         <div class="input-field">
                             <label>Relationship</label>
-                            <input type="text" placeholder="Mother, Father...">
+                            <input type="text" name="relation" placeholder="Mother, Father...">
                         </div>
 
                         <div class="input-field">
                             <label>Contact Number</label>
-                            <input type="text" maxlength="10" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10);" placeholder="Enter your state">
+                            <input type="text" name="contact_number" maxlength="10" oninput="this.value = this.value.replace(/[^0-9]/g, '').slice(0, 10);" placeholder="Enter your state">
                         </div>
                     </div>
                 </div>
